--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql": "^14.6.0",
     "apollo-server-express": "^2.15.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
