--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
-    "apollo-server-express": "^2.15.0",
-    "bootstrap": "^4.4.1",
-    "react-bootstrap": "^1.0.1",
-    "@apollo/client": "^3.3.5",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "graphql": "^15.4.0",
-    "jwt-decode": "^3.1.2",
+    "@apollo/client": "^3.3.7",
+    "@stripe/stripe-js": "^1.3.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "graphql": "^14.6.0",
+    "jwt-decode": "^2.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
+    "react-npm": "^2.6.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +30,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
