--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "googlebooks-app",
+  "name": "alertme-reactjs",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "client-install": "npm install --prefix client",
-    
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
+    "react-bootstrap": "^2.0.2"
   }
 }
