--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "server",
+  "name": "mern-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon",
+    "seed": "node seeders/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +17,12 @@
   "dependencies": {
     "apollo-server-express": "^2.12.0",
     "bcrypt": "^5.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
-    "graphql": "^15.5.1"
+    "twilio": "^3.71.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
